--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Maintainer: Pratheepa Jeganathan <pjeganat@stanford.edu>
 Description: Extension of the bootstrap method that enables inference on longitudinal microbiome data. 
              Creates block bootstrap samples. Computes optimal block length to use block bootstrap method using subsampling method. 
              Computes adjusted p-values and confidence limits.
-License: CCO
+License: GPL-2
 Encoding: UTF-8
 LazyData: true
 Imports:
@@ -21,5 +21,9 @@ Imports:
     ashr,
     BiocParallel,
     parallel,
-    doParallel
+    doParallel,
+    joineR
 RoxygenNote: 6.0.1
+Suggests: knitr,
+    rmarkdown
+VignetteBuilder: knitr
