--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,7 @@ Title: The Block Bootstrap Method for Longitudinal Microbiome Data
 Version: 0.1.0
 Author: Pratheepa Jeganathan
 Maintainer: Pratheepa Jeganathan <pjeganat@stanford.edu>
-Description: Extension of the bootstrap method that enables inference on longitudinal microbiome data. 
-             Creates block bootstrap samples. Computes optimal block length to use block bootstrap method using subsampling method. 
-             Computes adjusted p-values and confidence limits.
+Description: bootLong provides a set of tools for differential abundance analysis and subsampling method to compute the optimal block size for the block bootstrap method of longitudinal microbiome data.It also provides a set of tools to visulaize the correlogram, lag-plot, and variogram of longitudinal microbiome data. 
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
