change bboot_optblocksize to bootLongSubsampling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,9 @@ export(LMic_lagged)
 export(LMic_vario)
 export(LMic_vario_multaxa)
 export(bboot_LMic)
-export(bboot_optblocksize)
-export(bboot_phyloseq)
 export(bootLongIndices)
+export(bootLongPhyloseq)
+export(bootLongSubsampling)
 export(compute_stat)
 export(ps_trans)
 export(voom_arcsine)
