change fun names camelCase

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,16 +4,17 @@ export(ComputeMSE)
 export(LMic_correloram)
 export(LMic_correloram_multaxa)
 export(LMic_lagged)
-export(LMic_vario)
-export(LMic_vario_multaxa)
-export(bboot_LMic)
+export(arcsinhTransform)
 export(bootLongIndices)
+export(bootLongMSEPsi)
+export(bootLongMethod)
 export(bootLongPhyloseq)
 export(bootLongPsi)
 export(bootLongSubsampling)
-export(compute_stat)
-export(ps_trans)
-export(voom_arcsine)
+export(computeStat)
+export(longVarioMultiple)
+export(longVarioSingle)
+export(psTransform)
 import("BiocParallel")
 import("DESeq2")
 import("ashr")
