rewritten bootLongPsi, psTransform, computStat with glm.nb

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(bootLongPhyloseq)
 export(bootLongPsi)
 export(bootLongSubsampling)
 export(computeStat)
+export(computeStat2)
 export(longCorreloMultiple)
 export(longCorreloSingle)
 export(longLagPlot)
