--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(longCorreloSingle)
 export(longLagPlot)
 export(longVarioMultiple)
 export(longVarioSingle)
+export(plot_sampling_schedule)
 export(psTransform)
 import("BiocParallel")
 import("ashr")
@@ -24,3 +25,5 @@ import("edgeR")
 import("joineR")
 import("parallel")
 import("phyloseq")
+import(ggplot2)
+import(magrittr)
