update computeStat doc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,11 +21,10 @@ import("BiocParallel")
 import("ashr")
 import("doParallel")
 import("dplyr")
-import("edgeR")
 import("parallel")
-import("phyloseq")
 import(ggplot2)
 import(magrittr)
 import(phyloseq)
 importFrom(MASS,glm.nb)
+importFrom(geeM,geem)
 importFrom(joineR,variogram)
