--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,6 @@ export(psTransform)
 import("BiocParallel")
 import("ashr")
 import("doParallel")
-import("dplyr")
 import("parallel")
 import(ggplot2)
 import(magrittr)
@@ -28,3 +27,4 @@ import(phyloseq)
 importFrom(MASS,glm.nb)
 importFrom(geeM,geem)
 importFrom(joineR,variogram)
+importFrom(limma,lmFit)
