--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,13 +18,14 @@ Imports:
     ashr,
     BiocParallel,
     dplyr,
-    DESeq2,
     doParallel,
-    edgeR,
+    ggplot2,
     joineR,
     lazyeval,
     limma,
     magrittr,
+    MASS,
+    geeM,
     parallel,
     phyloseq,
     tidyr
