--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(computeStat)
 export(longCorreloMultiple)
 export(longCorreloSingle)
 export(longLagPlot)
+export(longPACFMultiple)
+export(longPACFSingle)
 export(longVarioMultiple)
 export(longVarioSingle)
 export(plotSamplingSchedule)
