addressing issue on psTransform

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(longVarioMultiple)
 export(longVarioSingle)
 export(plotSamplingSchedule)
 export(psTransform)
+importFrom(DESeq2,estimateSizeFactorsForMatrix)
 importFrom(MASS,glm.nb)
 importFrom(limma,lmFit)
 importFrom(parallel,mclapply)
