--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(bootLongMethod)
 export(bootLongPhyloseq)
 export(bootLongPsi)
 export(bootLongSubsampling)
+export(bootLongWorkingCor)
 export(computeStat)
 export(longCorreloMultiple)
 export(longCorreloSingle)
@@ -18,7 +19,6 @@ export(longVarioMultiple)
 export(longVarioSingle)
 export(plotSamplingSchedule)
 export(psTransform)
-export(sample.lag.correlation)
 importFrom(DESeq2,estimateSizeFactorsForMatrix)
 importFrom(MASS,glm.nb)
 importFrom(limma,lmFit)
