--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,16 @@ export(longVarioMultiple)
 export(longVarioSingle)
 export(plotSamplingSchedule)
 export(psTransform)
+import(phyloseq)
 importFrom(MASS,glm.nb)
+importFrom(ashr,ash)
+importFrom(graphics,lines)
+importFrom(graphics,title)
 importFrom(limma,lmFit)
+importFrom(magrittr,"%>%")
 importFrom(parallel,mclapply)
+importFrom(stats,approxfun)
+importFrom(stats,lowess)
+importFrom(stats,p.adjust)
+importFrom(stats,quantile)
+importFrom(stats,sd)
