adding _pkgdown.yaml

--- a/docs/_pkgdown.yaml
+++ b/docs/_pkgdown.yaml
@@ -1,5 +1,5 @@
 title: bootLong
-url: http://PratheepaJ.github.io/bootLong
+url: http://PratheepaJ/bootLong
 template:
   params:
     bootswatch: flatly
